# parking_system

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py
app/core/: config.py  constants.py  database.py
app/modules/parking/: __init__.py  model.py  repository.py  routes.py  schema.py  service.py
app/modules/passkey/: __init__.py  exceptions.py  generator.py  interfaces.py  service.py  validator.py
app/modules/vehicle/: __init__.py  model.py  repository.py  routes.py  schema.py  service.py
app/shared/: __init__.py
app/shared/exceptions/: __init__.py  base.py
app/shared/responses/: __init__.py  base.py
app/shared/utils/: __init__.py  datetime.py
app/shared/validators/: __init__.py  license_plate.py
tests/: test_license_plate_validator.py
