[project]
name = "smart-parking-system"
version = "0.1.0"
description = "Production-style Smart Parking backend with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
